--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
 a {
 	color: #FFBF00;
 }
+.auto-style59 {
+	text-align: center;
+	color: #0E2036;
+	background-color: #FFFFFF;
+	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
 </style>
 </head>
 
@@ -65,10 +71,11 @@ a {
 	<tr>
 		<td class="auto-style58" style="height: 41px; width: 208px">
 		Flyer</td>
-		<td class="auto-style46" style="height: 41px; width: 197px"><a class="auto-style53" href="staffel1.html">
-		<span class="auto-style51"><strong>BANNER</strong></span></a></td>
+		<td class="auto-style59" style="height: 41px; width: 197px">
+		<a class="auto-style53" href="SocialMedia.html"><strong>
+		<span class="auto-style51">SOCIAL MEDIA</span></strong></a></td>
 		<td class="auto-style46" style="height: 41px; width: 217px">
-		<a class="auto-style53" href="halloffame.html">
+		<a class="auto-style53" href="Anderes.html">
 		<span class="auto-style51"><strong>ANDERES</strong></span></a></td>
 	</tr>
 </table>
@@ -100,7 +107,13 @@ Infoflyer</a></strong></span><br class="auto-style57" />
 -Berlin</strong></span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--weitere folgen</strong></span><br class="auto-style57" />
+-weitere folgen...<br />
+<br />
+</strong>Banner:<strong><br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET </strong>200x70cm
+<strong>(</strong><a href="Flyer/Banner/Banner200x70.png"><strong>PNG</strong></a><strong> 
+| </strong><a href="Flyer/Banner/Banner200x70.pdf"><strong>PDF</strong></a>)</span><br class="auto-style57" />
 <br />
 </p>
 
