--- a/Anderes.html
+++ b/Anderes.html
@@ -24,7 +24,7 @@
 .auto-style46 {
 	text-align: center;
 	color: #FFFFFF;
-	background-color: #FFFFFF;
+	background-color: #E5E5E5;
 	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 .auto-style51 {
@@ -44,12 +44,6 @@
 .auto-style57 {
 	font-family: Raleway;
 }
-.auto-style58 {
-	text-align: center;
-	color: #0E2036;
-	background-color: #E5E5E5;
-	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
 a {
 	color: #FFBF00;
 }
@@ -58,6 +52,10 @@ a {
 	color: #0E2036;
 	background-color: #FFFFFF;
 	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.auto-style60 {
+	color: #FFBF00;
+	text-decoration: underline;
 }
 </style>
 </head>
@@ -69,51 +67,31 @@ a {
 <p class="auto-style2">&nbsp;</p>
 <table cellpadding="5" cellspacing="11" class="auto-style30" style="width: 60%">
 	<tr>
-		<td class="auto-style58" style="height: 41px; width: 208px">
-		Flyer</td>
+		<td class="auto-style59" style="height: 41px; width: 208px">
+		<strong>FLYER</strong></td>
 		<td class="auto-style59" style="height: 41px; width: 197px"><strong>
 		SOCIAL MEDIA</strong></td>
 		<td class="auto-style46" style="height: 41px; width: 217px">
 		<a class="auto-style53" href="halloffame.html">
-		<span class="auto-style51"><strong>ANDERES</strong></span></a></td>
+		<span class="auto-style51">ANDERES</span></a></td>
 	</tr>
 </table>
 <p class="auto-style55">SAVE THE INTERNET MEDIEN-FREIGABE&nbsp;</p>
 <p class="auto-style54" style="width: 876px"><span class="auto-style57">
-Willkommen zu unserer kleinen 0815 Seite. <br />
-Bitte nicht aufgrund des Designs motzen, es geht nur um die Freigabe von Flyern 
-etc hier. ;)</span><br class="auto-style57" />
+Hier gibts Logos etc.</span><br class="auto-style57" />
 <br class="auto-style57" />
 <br class="auto-style57" />
 <br class="auto-style57" />
-<span class="auto-style57"><strong><a href="Flyer/flyerA6nighty.pdf">A6 
-Infoflyer</a></strong></span><br class="auto-style57" />
-<br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">Einzeldemos:</span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Wien (<a href="Flyer/Wien/WIEN-Front.pdf">Vorderseite</a> |
-<a href="Flyer/Wien/WIEN-Back.pdf">Rückseite</a>]</strong></span><strong><br class="auto-style57" />
-<br class="auto-style57" />
-</strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Stuttgart</strong></span><strong><br class="auto-style57" />
-<br class="auto-style57" />
-</strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Köln</strong></span><strong><br class="auto-style57" />
-<br class="auto-style57" />
-</strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Berlin</strong></span><strong><br class="auto-style57" />
-<br class="auto-style57" />
-</strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--weitere folgen...<br />
+<span class="auto-style57"><a href="Anderes/LOGO_frei.png"><strong>L</strong></a><span class="auto-style60"><strong>ogo</strong></span></span><br class="auto-style57" />
 <br />
-</strong>Banner:<strong><br />
+<span class="auto-style57"><strong><a href="Anderes/#Saveyoutinternet.png">
+#Saveyourinternet</a><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET </strong>200x70cm
-<strong>(</strong><a href="Flyer/Banner/Banner200x70.png"><strong>PNG</strong></a><strong> 
-| </strong><a href="Flyer/Banner/Banner200x70.pdf"><strong>PDF</strong></a>)</span><br class="auto-style57" />
+<a href="Anderes/changeorgdeutschneu.png">-Petitionsbanner</a></strong></span><br />
 <br />
+<br />
+<br />
+Grafiken können gerne für nicht kommerzielle Zwecke verwendet werden.<br />
 </p>
 
 </body>
