--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@ etc hier. ;)</span><br class="auto-style57" />
 <span class="auto-style57"><strong><a href="Flyer/flyerA6nighty.pdf">A6 
 Infoflyer</a></strong></span><br class="auto-style57" />
 <br class="auto-style57" />
+<span class="auto-style57"><strong>Demo Flyer mit Karte</strong><em> (work in 
+progress...)</em></span><br />
 <br class="auto-style57" />
 <span class="auto-style57">Einzeldemos:</span><br class="auto-style57" />
 <br class="auto-style57" />
