--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@ progress...)</em></span><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET </strong>200x70cm
 <strong>(</strong><a href="Flyer/Banner/Banner200x70.png"><strong>PNG</strong></a><strong> 
-| </strong><a href="Flyer/Banner/Banner200x70.pdf"><strong>PDF</strong></a>)</span><br class="auto-style57" />
+| </strong><a href="Flyer/Banner/Banner200x70.pdf"><strong>PDF</strong></a>)<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>&nbsp;-Altes Low Effort Banner</strong> 
+200x70cm<strong> (<a href="Flyer/Banner/BannerAltPNG.png">PNG</a> |
+<a href="Flyer/Banner/BannerAltPDF.pdf">PDF</a>) </strong>für geringe 
+Druckkosten ;)</span><br class="auto-style57" />
 <br />
 </p>
 
