--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -59,6 +59,10 @@ a {
 	background-color: #FFFFFF;
 	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+.auto-style60 {
+	color: #0E2036;
+	background-color: #FFFFFF;
+}
 </style>
 </head>
 
@@ -69,50 +73,23 @@ a {
 <p class="auto-style2">&nbsp;</p>
 <table cellpadding="5" cellspacing="11" class="auto-style30" style="width: 60%">
 	<tr>
-		<td class="auto-style58" style="height: 41px; width: 208px">
-		Flyer</td>
-		<td class="auto-style59" style="height: 41px; width: 197px"><strong>
-		SOCIAL MEDIA</strong></td>
+		<td class="auto-style59" style="height: 41px; width: 208px">
+		<strong><a class="auto-style53" href="index.html">
+		<span class="auto-style60">Flyer</span></a></strong></td>
+		<td class="auto-style58" style="height: 41px; width: 197px">SOCIAL MEDIA</td>
 		<td class="auto-style46" style="height: 41px; width: 217px">
-		<a class="auto-style53" href="halloffame.html">
+		<a class="auto-style53" href="Anderes.html">
 		<span class="auto-style51"><strong>ANDERES</strong></span></a></td>
 	</tr>
 </table>
 <p class="auto-style55">SAVE THE INTERNET MEDIEN-FREIGABE&nbsp;</p>
-<p class="auto-style54" style="width: 876px"><span class="auto-style57">
-Willkommen zu unserer kleinen 0815 Seite. <br />
-Bitte nicht aufgrund des Designs motzen, es geht nur um die Freigabe von Flyern 
-etc hier. ;)</span><br class="auto-style57" />
-<br class="auto-style57" />
-<br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57"><strong><a href="Flyer/flyerA6nighty.pdf">A6 
-Infoflyer</a></strong></span><br class="auto-style57" />
-<br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">Einzeldemos:</span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Wien (<a href="Flyer/Wien/WIEN-Front.pdf">Vorderseite</a> |
-<a href="Flyer/Wien/WIEN-Back.pdf">Rückseite</a>]</strong></span><strong><br class="auto-style57" />
-<br class="auto-style57" />
-</strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Stuttgart</strong></span><strong><br class="auto-style57" />
-<br class="auto-style57" />
-</strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Köln</strong></span><strong><br class="auto-style57" />
-<br class="auto-style57" />
-</strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Berlin</strong></span><strong><br class="auto-style57" />
-<br class="auto-style57" />
-</strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--weitere folgen...<br />
+<p class="auto-style54" style="width: 876px"><br />
 <br />
-</strong>Banner:<strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET </strong>200x70cm
-<strong>(</strong><a href="Flyer/Banner/Banner200x70.png"><strong>PNG</strong></a><strong> 
-| </strong><a href="Flyer/Banner/Banner200x70.pdf"><strong>PDF</strong></a>)</span><br class="auto-style57" />
+<span class="auto-style57"><a href="Webseitenstuff/Facebook-HeaderClean3.png">
+<strong>Facebook Banner für die Demos</strong></a></span><br class="auto-style57" />
+<br class="auto-style57" />
+weiteres folgt....<br class="auto-style57" />
 <br />
 </p>
 
