--- a/Anderes.html
+++ b/Anderes.html
@@ -32,6 +32,7 @@
 }
 .auto-style53 {
 	text-decoration: none;
+	color: #000000;
 }
 .auto-style54 {
 	text-align: left;
@@ -57,6 +58,9 @@ a {
 	color: #FFBF00;
 	text-decoration: underline;
 }
+.auto-style61 {
+	text-decoration: none;
+}
 </style>
 </head>
 
@@ -68,12 +72,12 @@ a {
 <table cellpadding="5" cellspacing="11" class="auto-style30" style="width: 60%">
 	<tr>
 		<td class="auto-style59" style="height: 41px; width: 208px">
-		<strong>FLYER</strong></td>
+		<strong><a class="auto-style61" href="index.html">
+		<span class="auto-style51">FLYER</span></a></strong></td>
 		<td class="auto-style59" style="height: 41px; width: 197px"><strong>
-		SOCIAL MEDIA</strong></td>
+		<a class="auto-style53" href="SocialMedia.html">SOCIAL MEDIA</a></strong></td>
 		<td class="auto-style46" style="height: 41px; width: 217px">
-		<a class="auto-style53" href="halloffame.html">
-		<span class="auto-style51">ANDERES</span></a></td>
+		<span class="auto-style51">ANDERES</span></td>
 	</tr>
 </table>
 <p class="auto-style55">SAVE THE INTERNET MEDIEN-FREIGABE&nbsp;</p>
@@ -87,7 +91,7 @@ Hier gibts Logos etc.</span><br class="auto-style57" />
 <span class="auto-style57"><strong><a href="Anderes/#Saveyoutinternet.png">
 #Saveyourinternet</a><br />
 <br />
-<a href="Anderes/changeorgdeutschneu.png">-Petitionsbanner</a></strong></span><br />
+<a href="Anderes/changeorgdeutschneu.png">Petitionsbanner</a></strong></span><br />
 <br />
 <br />
 <br />
