--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@ a {
 </table>
 <p class="auto-style55">SAVE THE INTERNET MEDIEN-FREIGABE&nbsp;</p>
 <p class="auto-style54" style="width: 876px"><span class="auto-style57">
-Willkommen zu unserer kleinen 0815 Seite. <br />
-Bitte nicht aufgrund des Designs motzen, es geht nur um die Freigabe von Flyern 
-etc hier. ;)</span><br class="auto-style57" />
+NAVIGATION FÜR DIE MEDIENFREIGABE VON SAVETHEINTERNET.INFO</span><br class="auto-style57" />
 <br class="auto-style57" />
 <br class="auto-style57" />
 <br class="auto-style57" />
