--- a/index.html
+++ b/index.html
@@ -94,17 +94,31 @@ progress...)</em></span><br />
 <span class="auto-style57">Einzeldemos:</span><br class="auto-style57" />
 <br class="auto-style57" />
 <span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Wien (<a href="Flyer/Wien/WIEN-Front.pdf">Vorderseite</a> |
-<a href="Flyer/Wien/WIEN-Back.pdf">Rückseite</a>]</strong></span><strong><br class="auto-style57" />
+-Wien (<a href="Flyer/Städte/WIEN.pdf">Vorderseite</a> |
+<a href="Flyer/Rueckseiten.pdf">Rückseite</a>]</strong></span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Stuttgart</strong></span><strong><br class="auto-style57" />
+-Berlin (<a href="Flyer/Städte/BERLIN.pdf">Vorderseite</a> |
+<a href="Flyer/Rueckseiten.pdf">Rückseite</a>)</strong></span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Köln</strong></span><strong><br class="auto-style57" />
+-Bremen (<a href="Flyer/Städte/Bremen.pdf">Vorderseite</a> |
+<a href="Flyer/Rueckseiten.pdf">Rückseite</a>)</strong></span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Berlin</strong></span><strong><br class="auto-style57" />
+-</strong></span><strong><span class="auto-style57">Dortmund (<a href="Flyer/Städte/DORTMUND.pdf">Vorderseite</a> 
+| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Dresden (<a href="Flyer/Städte/DRESDEN.pdf">Vorderseite</a> 
+| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Düsseldorf (<a href="Flyer/Städte/DÜSSELDORF.pdf">Vorderseite</a> 
+| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Erfurt (<a href="Flyer/Städte/ERFURT.pdf">Vorderseite</a> 
+| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)</span><br class="auto-style57" />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<br />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 -weitere folgen...<br />
