--- a/index.html
+++ b/index.html
@@ -118,10 +118,25 @@ progress...)</em></span><br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Erfurt (<a href="Flyer/Städte/ERFURT.pdf">Vorderseite</a> 
 | <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)</span><br class="auto-style57" />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="auto-style57">-Frankfurt 
+(<a href="Flyer/Städte/FRANKFURT.pdf">Vorderseite</a> |
+<a href="Flyer/Rueckseiten.pdf">Rückseite</a>)</span><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--weitere folgen...<br />
+-Hamburg (<a href="Flyer/Städte/Hamburg.pdf">Vorderseite</a> |
+<a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Hannover (<a href="Flyer/Städte/Hannover.pdf">Vorderseite</a> 
+| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Karlsruhe (<a href="Flyer/Städte/KARLSRUHE.pdf">Vorderseite</a> 
+| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Kiel (<a href="Flyer/Städte/KIEL.pdf">Vorderseite</a> 
+| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Koblenz (<a href="Flyer/Städte/KOBLENZ.pdf">Vorderseite</a> 
+| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
 <br />
 </strong>Banner:<strong><br />
 <br />
