--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@ a {
 	background-color: #FFFFFF;
 	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+.auto-style60 {
+	text-align: center;
+	margin-left: 440px;
+}
 </style>
 </head>
 
@@ -79,23 +83,23 @@ a {
 		<span class="auto-style51"><strong>ANDERES</strong></span></a></td>
 	</tr>
 </table>
-<p class="auto-style55">SAVE THE INTERNET MEDIEN-FREIGABE&nbsp;</p>
+<p class="auto-style55">&nbsp;</p>
 <p class="auto-style54" style="width: 876px"><span class="auto-style57">
-NAVIGATION FÜR DIE MEDIENFREIGABE VON SAVETHEINTERNET.INFO</span><br class="auto-style57" />
+NAVIGATION FÜR DIE MEDIENFREIGABE VON SAVETHEINTERNET.INFO<br />
+Bei Fragen/Problemen etc. bitte im <a href="discord.savetheinternet.info">
+Discord</a> bei Flashyy/Soldiermelly melden.</span><br class="auto-style57" />
+<br />
+<br />
 <br class="auto-style57" />
+<span class="auto-style57">Flyer</span><br class="auto-style57" />
 <br class="auto-style57" />
+<span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -A6 
+Infoflyer (<a href="Flyer/flyerA6nighty.pdf">PDF</a>)</strong></span><br class="auto-style57" />
 <br class="auto-style57" />
-<span class="auto-style57"><strong><a href="Flyer/flyerA6nighty.pdf">A6 
-Infoflyer</a></strong></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57"><strong>Demo Flyer mit Karte</strong><em> (work in 
+<span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Demo Flyer mit Karte</strong><em> (work in 
 progress...)</em></span><br />
 <br class="auto-style57" />
-<span class="auto-style57">Einzeldemos:</span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Wien (<a href="Flyer/Städte/WIEN.pdf">Vorderseite</a> |
-<a href="Flyer/Rueckseiten.pdf">Rückseite</a>]</strong></span><strong><br class="auto-style57" />
+<span class="auto-style57">Einzeldemos:</span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 -Berlin (<a href="Flyer/Städte/BERLIN.pdf">Vorderseite</a> |
@@ -138,6 +142,28 @@ progress...)</em></span><br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Koblenz (<a href="Flyer/Städte/KOBLENZ.pdf">Vorderseite</a> 
 | <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
 <br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Köln (<a href="Flyer/Städte/Köln.pdf">Vorderseite</a> 
+| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Leipzig (<a href="Flyer/Städte/LEIPZIG.pdf">Vorderseite</a> 
+| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -München (<a href="Flyer/Städte/MÜNCHEN.pdf">Vorderseite</a> 
+| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Rostock (<a href="Flyer/Städte/Rostock.pdf">Vorderseite</a> 
+| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Saarbrücken (<a href="Flyer/Städte/SAARBRÜCKEN.pdf">Vorderseite</a> 
+| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Stuttgart (<a href="Flyer/Städte/Stuttgart.pdf">Vorderseite</a> 
+| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Wien (<a href="Flyer/Städte/WIEN.pdf">Vorderseite</a> |
+<a href="Flyer/Rueckseiten.pdf">Rückseite</a>]<br />
+<br />
+<br />
 </strong>Banner:<strong><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET </strong>200x70cm
@@ -147,7 +173,20 @@ progress...)</em></span><br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>&nbsp;-Altes Low Effort Banner</strong> 
 200x70cm<strong> (<a href="Flyer/Banner/BannerAltPNG.png">PNG</a> |
 <a href="Flyer/Banner/BannerAltPDF.pdf">PDF</a>) </strong>für geringe 
-Druckkosten ;)</span><br class="auto-style57" />
+Druckkosten ;)<br />
+</span>
+</p>
+<p class="auto-style60" style="width: 876px"><br />
+<span class="auto-style57"><br />
+<br />
+<br />
+Wir fordern jeden auf, nur die von uns freigegebenen Werbemittel an gestatteten 
+Orten zu nutzen und zu verbreiten. Wir distanzieren uns von jeglichen fremden 
+Werbemitteln und deren Anbringung an rechtswidrigen Flächen. Zusätzlich 
+übernehmen wir keinerlei Haftung für dadurch entstandene Schäden.<br />
+<br />
+<a href="https://savetheinternet.info/imprint">Impressum</a><br />
+</span><br class="auto-style57" />
 <br />
 </p>
 
