--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Discord</a> bei Flashyy/Soldiermelly melden.</span><br class="auto-style57" />
 <span class="auto-style57">Flyer</span><br class="auto-style57" />
 <br class="auto-style57" />
 <span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -A6 
-Infoflyer (<a href="Flyer/flyerA6nighty.pdf">PDF</a>)</strong></span><br class="auto-style57" />
+Infoflyer </strong><em>(wartet auf Freigabe)</em></span><br class="auto-style57" />
 <br class="auto-style57" />
 <span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Demo Flyer mit Karte</strong><em> (work in 
 progress...)</em></span><br />
