--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@ a {
 	text-align: center;
 	margin-left: 440px;
 }
+.auto-style61 {
+	font-weight: normal;
+}
+.auto-style62 {
+	font-family: Raleway;
+	font-size: x-large;
+}
 </style>
 </head>
 
@@ -87,86 +94,100 @@ a {
 <p class="auto-style54" style="width: 876px"><span class="auto-style57">
 NAVIGATION FÜR DIE MEDIENFREIGABE VON SAVETHEINTERNET.INFO<br />
 Bei Fragen/Problemen etc. bitte im <a href="discord.savetheinternet.info">
-Discord</a> bei Flashyy/Soldiermelly melden.</span><br class="auto-style57" />
+Discord</a> bei Flashyy/Soldiermelly melden.<br />
 <br />
 <br />
+</span><br class="auto-style57" />
+</p>
+<p class="auto-style54" style="width: 876px"><span class="auto-style62"><strong>
+FLYER/BANNER</strong></span><br />
 <br class="auto-style57" />
-<span class="auto-style57">Flyer</span><br class="auto-style57" />
+<span class="auto-style57"><strong>Standardflyer</strong> (A6, 1mm Rand, CMYK, 
+300dpi)</span><br class="auto-style57" />
 <br class="auto-style57" />
 <span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -A6 
 Infoflyer </strong><em>(wartet auf Freigabe)</em></span><br class="auto-style57" />
 <br class="auto-style57" />
 <span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Demo Flyer mit Karte</strong><em> (work in 
 progress...)</em></span><br />
+<br />
 <br class="auto-style57" />
-<span class="auto-style57">Einzeldemos:</span><strong><br class="auto-style57" />
-<br class="auto-style57" />
-</strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Berlin (<a href="Flyer/Städte/BERLIN.pdf">Vorderseite</a> |
-<a href="Flyer/Rueckseiten.pdf">Rückseite</a>)</strong></span><strong><br class="auto-style57" />
+<span class="auto-style57"><strong>Einzeldemos (</strong>Logos der 
+Bündnispartner werden auf Nachfrage eingebaut)</span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Bremen (<a href="Flyer/Städte/Bremen.pdf">Vorderseite</a> |
-<a href="Flyer/Rueckseiten.pdf">Rückseite</a>)</strong></span><strong><br class="auto-style57" />
+-Berlin </strong>(<a href="Flyer/Demos/BERLIN-finalprint.pdf">Vorderseite</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)</span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--</strong></span><strong><span class="auto-style57">Dortmund (<a href="Flyer/Städte/DORTMUND.pdf">Vorderseite</a> 
-| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Dresden (<a href="Flyer/Städte/DRESDEN.pdf">Vorderseite</a> 
-| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Düsseldorf (<a href="Flyer/Städte/DÜSSELDORF.pdf">Vorderseite</a> 
-| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Erfurt (<a href="Flyer/Städte/ERFURT.pdf">Vorderseite</a> 
-| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)</span><br class="auto-style57" />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="auto-style57">-Frankfurt 
-(<a href="Flyer/Städte/FRANKFURT.pdf">Vorderseite</a> |
-<a href="Flyer/Rueckseiten.pdf">Rückseite</a>)</span><br class="auto-style57" />
+-Bremen</strong> (<a href="Flyer/Demos/BREMEN-finalprint.pdf">Vorderseite</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)</span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Hamburg (<a href="Flyer/Städte/Hamburg.pdf">Vorderseite</a> |
-<a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+-</strong></span><span class="auto-style57"><strong>Dortmund<span class="auto-style61"> (<a href="Flyer/Demos/DORTMUND-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></strong>)<strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Hannover (<a href="Flyer/Städte/Hannover.pdf">Vorderseite</a> 
-| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Dresden<span class="auto-style61"> (<a href="Flyer/Demos/DRESDEN-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></strong>)<strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Karlsruhe (<a href="Flyer/Städte/KARLSRUHE.pdf">Vorderseite</a> 
-| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Düsseldorf 
+<span class="auto-style61">(<a href="Flyer/Demos/Duesseldorf-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<br />
+</span>
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Kiel (<a href="Flyer/Städte/KIEL.pdf">Vorderseite</a> 
-| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Erfurt <span class="auto-style61">(<a href="Flyer/Demos/ERFURT-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></strong>)</span><strong><br class="auto-style57" />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Koblenz (<a href="Flyer/Städte/KOBLENZ.pdf">Vorderseite</a> 
-| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="auto-style57">-Frankfurt<span class="auto-style61"> 
+(<a href="Flyer/Demos/FRANKFURT-finalprint.pdf">Vorderseite</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></span></strong><span class="auto-style57">)</span><strong><br class="auto-style57" />
+<br class="auto-style57" />
+</strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+-Hamburg</strong> (<a href="Flyer/Demos/HAMBURG-finalprint.pdf">Vorderseite</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Köln (<a href="Flyer/Städte/Köln.pdf">Vorderseite</a> 
-| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Hannover</strong> (<a href="Flyer/Demos/HANNOVER-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Leipzig (<a href="Flyer/Städte/LEIPZIG.pdf">Vorderseite</a> 
-| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Karlsruhe</strong> (<a href="Flyer/Demos/KARLSRUHE-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -München (<a href="Flyer/Städte/MÜNCHEN.pdf">Vorderseite</a> 
-| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Kiel</strong> (<a href="Flyer/Demos/KIEL-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Rostock (<a href="Flyer/Städte/Rostock.pdf">Vorderseite</a> 
-| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Koblenz 
+</strong>(<a href="Flyer/Demos/KOBLENZ-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Saarbrücken (<a href="Flyer/Städte/SAARBRÜCKEN.pdf">Vorderseite</a> 
-| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Köln 
+</strong>(<a href="Flyer/Demos/KOELN-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<br />
+<strong>
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Stuttgart (<a href="Flyer/Städte/Stuttgart.pdf">Vorderseite</a> 
-| <a href="Flyer/Rueckseiten.pdf">Rückseite</a>)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Leipzig</strong> (<a href="Flyer/Demos/LEIPZIG-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Wien (<a href="Flyer/Städte/WIEN.pdf">Vorderseite</a> |
-<a href="Flyer/Rueckseiten.pdf">Rückseite</a>]<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -München</strong> (<a href="Flyer/Demos/MUENCHEN-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Rostock</strong> (<a href="Flyer/Demos/ROSTOCK-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><em>)</em><br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Saarbrücken</strong> (<a href="Flyer/Demos/SAARBRUECKEN-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Stuttgart</strong> (<a href="Flyer/Demos/STUTTGART-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Wien</strong> (<a href="Flyer/Demos/WIEN-finalprint.pdf">Vorderseite</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
 <br />
 <br />
-</strong>Banner:<strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET </strong>200x70cm
+Banner:<br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET 
+</strong>200x70cm
 <strong>(</strong><a href="Flyer/Banner/Banner200x70.png"><strong>PNG</strong></a><strong> 
 | </strong><a href="Flyer/Banner/Banner200x70.pdf"><strong>PDF</strong></a>)<br />
 <br />
