--- a/index.html
+++ b/index.html
@@ -112,8 +112,11 @@ Infoflyer </strong><em>(wartet auf Freigabe)</em></span><br class="auto-style57"
 progress...)</em></span><br />
 <br />
 <br class="auto-style57" />
-<span class="auto-style57"><strong>Einzeldemos (</strong>Logos der 
-Bündnispartner werden auf Nachfrage eingebaut)</span><strong><br class="auto-style57" />
+<span class="auto-style57"><strong>Einzeldemos <br />
+&nbsp;&nbsp;&nbsp; </strong>Logos der 
+Bündnispartner werden auf Nachfrage eingebaut<br />
+&nbsp;&nbsp;&nbsp; -&gt;<br />
+&nbsp;&nbsp;&nbsp; Bitte die Richtigkeit der Angaben auf den Flyern überprüfen!</span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 -Berlin </strong>(<a href="Flyer/Demos/BERLIN-finalprint.pdf">Vorderseite</a> |
