Neue FLyer mit Logos

--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@ progress...)</em></span><br />
 <br class="auto-style57" />
 <span class="auto-style57"><strong>Einzeldemos <br />
 &nbsp;&nbsp;&nbsp; </strong>Logos der 
-Bündnispartner werden auf Nachfrage eingebaut<br />
-&nbsp;&nbsp;&nbsp; -&gt;<br />
-&nbsp;&nbsp;&nbsp; Bitte die Richtigkeit der Angaben auf den Flyern überprüfen!</span><strong><br class="auto-style57" />
+Bündnispartner werden auf Nachfrage eingebaut. Gerne könnt ihr das Formular 
+dafür nutzen:<br />
+&nbsp;&nbsp;&nbsp; <a href="https://goo.gl/forms/GDgE1W0WukdAhmET2">
+https://goo.gl/forms/GDgE1W0WukdAhmET2</a><br />
+&nbsp;&nbsp;&nbsp; Bitte auch die Richtigkeit der Angaben auf den Flyern überprüfen!</span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 -Berlin </strong>(<a href="Flyer/Demos/BERLIN-finalprint.pdf">Vorderseite</a> |
@@ -130,7 +132,8 @@ Bündnispartner werden auf Nachfrage eingebaut<br />
 -</strong></span><span class="auto-style57"><strong>Dortmund<span class="auto-style61"> (<a href="Flyer/Demos/DORTMUND-finalprint.pdf">Vorderseite</a> 
 | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></strong>)<strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Dresden<span class="auto-style61"> (<a href="Flyer/Demos/DRESDEN-finalprint.pdf">Vorderseite</a> 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Dresden<span class="auto-style61"> (<a href="Flyer/Demos/Dresden/DRESDEN-finalprint.pdf">Ohne 
+Logos</a> | <a href="Flyer/Demos/Dresden/DRESDEN-logos.pdf">Mit Logos</a> 
 | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></strong>)<strong><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Düsseldorf 
@@ -142,8 +145,13 @@ Bündnispartner werden auf Nachfrage eingebaut<br />
 | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></strong>)</span><strong><br class="auto-style57" />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="auto-style57">-Frankfurt<span class="auto-style61"> 
-(<a href="Flyer/Demos/FRANKFURT-finalprint.pdf">Vorderseite</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></span></strong><span class="auto-style57">)</span><strong><br class="auto-style57" />
+(<a href="Flyer/Demos/FFM/FRANKFURT-finalprint.pdf">Ohne Logos</a> |
+<a href="Flyer/Demos/FFM/FFMversion1.pdf">V1</a> |
+<a href="Flyer/Demos/FFM/FFMversion2.pdf">V2</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></span></strong><span class="auto-style57">)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; In V2 wurde ein Teil des 
+Logos für bessere Lesbarkeit invertiert. <strong>Bitte mit dem Partner klären, 
+ob das geht!</strong></span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 -Hamburg</strong> (<a href="Flyer/Demos/HAMBURG-finalprint.pdf">Vorderseite</a> |
