--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ ob das geht!</strong></span><strong><br class="auto-style57" />
 -Hamburg</strong> (<a href="Flyer/Demos/HAMBURG-finalprint.pdf">Vorderseite</a> |
 <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Hannover</strong> (<a href="Flyer/Demos/HANNOVER-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Hannover</strong> (<a href="Flyer/Demos/Hannover/HANNOVER-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/Demos/Hannover/Hannover_Logos.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Karlsruhe</strong> (<a href="Flyer/Demos/KARLSRUHE-finalprint.pdf">Vorderseite</a> 
 | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
