Formulare / Bremenflyer raus

--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -88,8 +88,14 @@ a {
 <br />
 <span class="auto-style57"><a href="Webseitenstuff/Facebook-HeaderClean3.png">
 <strong>Facebook Banner für die Demos</strong></a></span><br class="auto-style57" />
+<br />
+<span class="auto-style57">Banner für eure örtlichen Demos bitte hier Anfragen: 
+(quasi wie bei den Flyern)</span><br class="auto-style57" />
+<span class="auto-style57"><a href="https://goo.gl/forms/xpHP0kNIDYSZnvjM2">
+https://goo.gl/forms/xpHP0kNIDYSZnvjM2</a></span><br class="auto-style57" />
+<span class="auto-style57">Wenn ihr das mit den Flyern bereits ausgefüllt habt, 
+könnt ihr einfach darauf verweisen.</span><br />
 <br class="auto-style57" />
-weiteres folgt....<br class="auto-style57" />
 <br />
 </p>
 
