--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -37,10 +37,6 @@
 	text-align: left;
 	margin-left: 440px;
 }
-.auto-style55 {
-	text-align: center;
-	font-family: Raleway;
-}
 .auto-style57 {
 	font-family: Raleway;
 }
@@ -82,20 +78,23 @@ a {
 		<span class="auto-style51"><strong>ANDERES</strong></span></a></td>
 	</tr>
 </table>
-<p class="auto-style55">SAVE THE INTERNET MEDIEN-FREIGABE&nbsp;</p>
 <p class="auto-style54" style="width: 876px"><br />
 <br />
 <br />
 <span class="auto-style57"><a href="Webseitenstuff/Facebook-HeaderClean3.png">
 <strong>Facebook Banner für die Demos</strong></a></span><br class="auto-style57" />
 <br />
-<span class="auto-style57">Banner für eure örtlichen Demos bitte hier Anfragen: 
-(quasi wie bei den Flyern)</span><br class="auto-style57" />
+<span class="auto-style57">Banner für eure örtlichen Demos bitte hier Anfragen:</span><br class="auto-style57" />
 <span class="auto-style57"><a href="https://goo.gl/forms/xpHP0kNIDYSZnvjM2">
 https://goo.gl/forms/xpHP0kNIDYSZnvjM2</a></span><br class="auto-style57" />
-<span class="auto-style57">Wenn ihr das mit den Flyern bereits ausgefüllt habt, 
-könnt ihr einfach darauf verweisen.</span><br />
-<br class="auto-style57" />
+<span class="auto-style57"><strong>Wenn ihr das mit den Flyern bereits 
+ausgefüllt habt, könnt ihr das ignorieren</strong>: <br />
+Euer Banner kommt vermutlich morgen.<br />
+<br />
+Geht nur um die, die keinen Flyer brauchen, sich aber einen FB Banner wünschen 
+(oder sich Flyer/ Banner Logos unterschieden)<br />
+Uns ist bewusst, dass man das mit einem Formular hätte lösen können aber... 
+(Witz über Bürokratiedjungel / öffentliche Einrichtungen)</span><br class="auto-style57" />
 <br />
 </p>
 
