--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@ a {
 	font-family: Raleway;
 	font-size: x-large;
 }
+.auto-style63 {
+	color: #FFBF00;
+}
 </style>
 </head>
 
@@ -158,7 +161,8 @@ ob das geht!</strong></span><strong><br class="auto-style57" />
 -Hamburg</strong> (<a href="Flyer/Demos/HAMBURG-finalprint.pdf">Vorderseite</a> |
 <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Hannover</strong> (<a href="Flyer/Demos/Hannover/HANNOVER-finalprint.pdf">Vorderseite</a> 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Hannover</strong> (<a href="Flyer/Demos/Hannover/HANNOVER-finalprint.pdf">O<span class="auto-style63">hne 
+Logos</span></a> 
 | <a href="Flyer/Demos/Hannover/Hannover_Logos.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Karlsruhe</strong> (<a href="Flyer/Demos/KARLSRUHE-finalprint.pdf">Vorderseite</a> 
@@ -176,8 +180,9 @@ ob das geht!</strong></span><strong><br class="auto-style57" />
 | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<br />
 <strong>
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Leipzig</strong> (<a href="Flyer/Demos/LEIPZIG-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Leipzig</strong> (<a href="Flyer/Demos/LEIPZIG/LEIPZIG-finalprint.pdf">O<span class="auto-style63">hne 
+Logos</span></a> 
+| <a href="Flyer/Demos/LEIPZIG/LEIPZIG.LOGOS2.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -München</strong> (<a href="Flyer/Demos/MUENCHEN-finalprint.pdf">Vorderseite</a> 
 | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
