--- a/index.html
+++ b/index.html
@@ -128,9 +128,8 @@ https://goo.gl/forms/GDgE1W0WukdAhmET2</a><br />
 <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)</span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Bremen</strong> (Vorderseite |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a>) - Fehler wird korrigiert, wenn 
-Bündnispartner stehen</span><strong><br class="auto-style57" />
+-Bremen</strong> (<a href="Flyer/Demos/BREMEN-finalprint2.pdf">Vorderseite</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)</span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 -</strong></span><span class="auto-style57"><strong>Dortmund<span class="auto-style61"> (<a href="Flyer/Demos/DORTMUND-finalprint.pdf">Vorderseite</a> 
