--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ a {
 .auto-style62 {
 	font-family: Raleway;
 	font-size: x-large;
+	margin-left: 80px;
 }
 .auto-style63 {
 	color: #FFBF00;
@@ -124,79 +125,115 @@ https://goo.gl/forms/GDgE1W0WukdAhmET2</a><br />
 &nbsp;&nbsp;&nbsp; Bitte auch die Richtigkeit der Angaben auf den Flyern überprüfen!</span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Berlin </strong>(<a href="Flyer/Demos/BERLIN-finalprint.pdf">Vorderseite</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)</span><strong><br class="auto-style57" />
+-Berlin <br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
+<a href="Flyer/Demos/BERLIN-finalprint.pdf">Vorderseite</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Bremen</strong> (<a href="Flyer/Demos/BREMEN-finalprint2.pdf">Vorderseite</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)</span><strong><br class="auto-style57" />
+-Bremen<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
+<a href="Flyer/Demos/BREMEN-finalprint2.pdf">Vorderseite</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--</strong></span><span class="auto-style57"><strong>Dortmund<span class="auto-style61"> (<a href="Flyer/Demos/DORTMUND-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></strong>)<strong><br />
+-</strong></span><span class="auto-style57"><strong>Dortmund<span class="auto-style61"> 
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Dresden<span class="auto-style61"> (<a href="Flyer/Demos/Dresden/DRESDEN-finalprint.pdf">Ohne 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="Flyer/Demos/DORTMUND-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Dresden<br />
+<span class="auto-style61"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="Flyer/Demos/Dresden/DRESDEN-finalprint.pdf">Ohne 
 Logos</a> | <a href="Flyer/Demos/Dresden/DRESDEN-logos.pdf">Mit Logos</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></strong>)<strong><br />
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Düsseldorf 
-<span class="auto-style61">(<a href="Flyer/Demos/Duesseldorf-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Düsseldorf<br />
+<span class="auto-style61">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="Flyer/Demos/Duesseldorf-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><br />
 </span>
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Erfurt <span class="auto-style61">(<a href="Flyer/Demos/ERFURT-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></strong>)</span><strong><br class="auto-style57" />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Erfurt<br />
+<span class="auto-style61">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="Flyer/Demos/ERFURT-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></strong></span><strong><br class="auto-style57" />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="auto-style57">-Frankfurt<span class="auto-style61"> 
-(<a href="Flyer/Demos/FFM/FRANKFURT-finalprint.pdf">Ohne Logos</a> |
-<a href="Flyer/Demos/FFM/FFMversion1.pdf">V1</a> |
-<a href="Flyer/Demos/FFM/FFMversion2.pdf">V2</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></span></strong><span class="auto-style57">)<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; In V2 wurde ein Teil des 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="auto-style57">-Frankfurt<br />
+<span class="auto-style61"> 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="Flyer/Demos/FFM/FRANKFURT-finalprint.pdf">Ohne Logos</a> |
+<a href="Flyer/Demos/FFM/FFMversion2.pdf">Mit Logos</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></span></strong><span class="auto-style57"><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In V2 wurde ein Teil des 
 Logos für bessere Lesbarkeit invertiert. <strong>Bitte mit dem Partner klären, 
 ob das geht!</strong></span><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
--Hamburg</strong> (<a href="Flyer/Demos/HAMBURG-finalprint.pdf">Vorderseite</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
+-Hamburg<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
+<a href="Flyer/Demos/HAMBURG-finalprint.pdf">Vorderseite</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Hannover</strong> (<a href="Flyer/Demos/Hannover/HANNOVER-finalprint.pdf">O<span class="auto-style63">hne 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Hannover<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
+<a href="Flyer/Demos/Hannover/HANNOVER-finalprint.pdf">O<span class="auto-style63">hne 
 Logos</span></a> 
-| <a href="Flyer/Demos/Hannover/Hannover_Logos.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
+| <a href="Flyer/Demos/Hannover/Hannover_Logos.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Karlsruhe</strong> (<a href="Flyer/Demos/KARLSRUHE-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Karlsruhe<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
+<a href="Flyer/Demos/KARLSRUHE-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Kiel</strong> (<a href="Flyer/Demos/KIEL-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Kiel<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
+<a href="Flyer/Demos/KIEL-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Koblenz 
-</strong>(<a href="Flyer/Demos/KOBLENZ-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Koblenz<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+</strong><a href="Flyer/Demos/KOBLENZ-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Köln 
-</strong>(<a href="Flyer/Demos/KOELN-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Köln<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+</strong><a href="Flyer/Demos/KOELN-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><br />
 <strong>
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Leipzig</strong> (<a href="Flyer/Demos/LEIPZIG/LEIPZIG-finalprint.pdf">O<span class="auto-style63">hne 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Leipzig<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
+<a href="Flyer/Demos/LEIPZIG/LEIPZIG-finalprint.pdf">O<span class="auto-style63">hne 
 Logos</span></a> 
-| <a href="Flyer/Demos/LEIPZIG/LEIPZIG.LOGOS2.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
+| <a href="Flyer/Demos/LEIPZIG/LEIPZIG.LOGOS2.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -München</strong> (<a href="Flyer/Demos/MUENCHEN-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -München<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
+<a href="Flyer/Demos/MUENCHEN-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Rostock</strong> (<a href="Flyer/Demos/ROSTOCK-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><em>)</em><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Rostock<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
+<a href="Flyer/Demos/ROSTOCK-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Saarbrücken</strong> (<a href="Flyer/Demos/SAARBRUECKEN-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Saarbrücken<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
+<a href="Flyer/Demos/SAARBRUECKEN-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Stuttgart</strong> (<a href="Flyer/Demos/STUTTGART-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Stuttgart<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
+<a href="Flyer/Demos/STUTTGART-finalprint.pdf">Vorderseite</a> 
+| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Wien</strong> (<a href="Flyer/Demos/WIEN-finalprint.pdf">Vorderseite</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a>)<strong><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Wien<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
+<a href="Flyer/Demos/WIEN-finalprint.pdf">Vorderseite</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
+<br />
 <br />
 <br />
 <br />
