--- a/index.html
+++ b/index.html
@@ -165,10 +165,7 @@ Logos</a> | <a href="Flyer/Demos/Dresden/DRESDEN-logos.pdf">Mit Logos</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="Flyer/Demos/FFM/FRANKFURT-finalprint.pdf">Ohne Logos</a> |
 <a href="Flyer/Demos/FFM/FFMversion2.pdf">Mit Logos</a> |
-<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></span></strong><span class="auto-style57"><br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In V2 wurde ein Teil des 
-Logos für bessere Lesbarkeit invertiert. <strong>Bitte mit dem Partner klären, 
-ob das geht!</strong></span><strong><br class="auto-style57" />
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span></span></strong><strong><br class="auto-style57" />
 <br class="auto-style57" />
 </strong><span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 -Hamburg<br />
