--- a/index.html
+++ b/index.html
@@ -184,6 +184,12 @@ Logos</span></a>
 <a href="Flyer/Demos/KARLSRUHE-finalprint.pdf">Vorderseite</a> 
 | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Kassel<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
+<a href="Flyer/Demos/KASSEL-finalprint.pdf">Vorderseite</a><strong> 
+| </strong>
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
+<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Kiel<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
 <a href="Flyer/Demos/KIEL-finalprint.pdf">Vorderseite</a> 
