--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Logos</span></a>
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Kassel<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/KASSEL-finalprint.pdf">Vorderseite</a><strong> 
+<a href="Flyer/Demos/KASSEL-finalprint.pdf"><span class="auto-style63">Mit Logos</span></a><strong> 
 | </strong>
 <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
