--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -96,6 +96,10 @@ Geht nur um die, die keinen Flyer brauchen, sich aber einen FB Banner wünschen
 Uns ist bewusst, dass man das mit einem Formular hätte lösen können aber... 
 (Witz über Bürokratiedjungel / öffentliche Einrichtungen)</span><br class="auto-style57" />
 <br />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<strong>Dresden</strong> 
+(<a href="SocialMedia/Dresden-fix.png">Mit Logos</a>)</span><br class="auto-style57" />
+<br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -</span><br />
 </p>
 
 </body>
