--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -87,15 +87,12 @@ a {
 <span class="auto-style57">Banner für eure örtlichen Demos bitte hier Anfragen:</span><br class="auto-style57" />
 <span class="auto-style57"><a href="https://goo.gl/forms/xpHP0kNIDYSZnvjM2">
 https://goo.gl/forms/xpHP0kNIDYSZnvjM2</a></span><br class="auto-style57" />
-<span class="auto-style57"><strong>Wenn ihr das mit den Flyern bereits 
-ausgefüllt habt, könnt ihr das ignorieren</strong>: <br />
-Euer Banner kommt vermutlich morgen.<br />
+<span class="auto-style57">Geht nur um die, die keinen Flyer brauchen, sich aber einen FB Banner wünschen.<br />
+Uns ist bewusst, dass man das mit einem Formular hätte lösen können aber...</span><br class="auto-style57" />
 <br />
-Geht nur um die, die keinen Flyer brauchen, sich aber einen FB Banner wünschen 
-(oder sich Flyer/ Banner Logos unterschieden)<br />
-Uns ist bewusst, dass man das mit einem Formular hätte lösen können aber... 
-(Witz über Bürokratiedjungel / öffentliche Einrichtungen)</span><br class="auto-style57" />
-<br />
+<span class="auto-style57">Der Header ist an sich zu groß, was nicht schlimm 
+ist, weil Facebook den zuschneidet.<br />
+</span><br />
 <span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<strong>Dresden</strong> 
 (<a href="SocialMedia/Dresden-fix.png">Mit Logos</a>)</span><br class="auto-style57" />
 <br class="auto-style57" />
