endlich ist der flyer mal fertig, shoutouts an nighty für die gedult

--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@ FLYER/BANNER</strong></span><br />
 300dpi)</span><br class="auto-style57" />
 <br class="auto-style57" />
 <span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -A6 
-Infoflyer </strong><em>(wartet auf Freigabe)</em></span><br class="auto-style57" />
+Infoflyer<br />
+</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="Flyer/NIGHTY/NIGHTY-FRONT.pdf">Vorderseite</a> |
+<a href="Flyer/NIGHTY/NIGHTY-BACK.pdf">Rückseite</a><strong><br />
+</strong></span>
 <br class="auto-style57" />
 <span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Demo Flyer mit Karte</strong><em> (work in 
 progress...)</em></span><br />
